Hopefully fix viewport on Safari

--- a/Pages/Index.razor.css
+++ b/Pages/Index.razor.css
@@ -1,6 +1,6 @@
 .subpage {
 	width: 100vw;
-	height: 100vh;
+	height: calc(100vh - env(safe-area-inset-bottom));
 	scroll-snap-align: start;
 	position: relative;
 
@@ -25,7 +25,7 @@
 
 .page-container {
 	overflow-y: scroll;
-	height: 100vh;
+	height: calc(100vh - env(safe-area-inset-bottom));
 	-ms-scroll-snap-type: y mandatory;
 	    scroll-snap-type: y mandatory;
 	scroll-behavior: smooth;
